# r2db

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
.github/workflows/: ci.yml
cmake/: FindRadare2.cmake
include/: r_project.h  r_serialize.h
src/: anal.c  config.c  core.c  core_r2db.c  flag.c  io.c  plugin.c  project.c  sdb_archive.c  serialize_util.h  spaces.c
test/: .gitignore  CMakeLists.txt  Makefile  minunit.h  sdb_diff.c  sdb_diff.h  test_flag.c  test_sdb_diff.c  test_spaces.c  test_utils.h
test/db/extras/: r2db
test/unit/: CMakeLists.txt  test_anal.c  test_config.c  test_flag.c  test_sdb_archive.c  test_spaces.c  test_utils.h
